# OmnivoreQL

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  demo.ipynb  pyproject.toml  requirement.txt  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: publish.yml  python-publish.yml  release.yml  test.yml
docs/: CONTRIBUTING.md  PYPI.md  Publish.md  Release.md
omnivoreql/: __init__,py  __init__.py  __version__.py  models.py  omnivoreql.py
omnivoreql/omnivoreql/: omnivoreql.py  schema.gql
omnivoreql/queries/: ApplyLabels.graphql  ArticleContent.graphql  DeleteLabel.graphql  GetSubscriptions.graphql  Labels.graphql  SavePage.graphql  SaveUrl.graphql  Search.graphql  UpdateLabel.graphql
omnivoreql/tests/: .env.sample  test_omnivoreql.py
test/: test_omnivoreql.py
tests/: demo.ipynb  test_omnivoreql.py
