[tool.poetry]
name = "omnivoreql"
version = "0.2.1"
description = "Omnivore API client for Python"
authors = [
    "yazdipour <yazdipour@users.noreply.github.com>",
    "pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
gql = "3.4.1"
requests-toolbelt = "1.0.0"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
rich = "^13.5.2"
ipython = "^8.14.0"
ruff = "^0.0.282"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
